# EASACompliance

./: .gitignore  README.md  build_embeddings.py  chat_mcp.py  compliance_crew.py  env.example  install.sh  pyproject.toml  requirements.txt  run_mcp_server.py
data/: EASA-eRules-XML-Export-Schema-1.0.0.xsd
docs/: CHANGELOG.md  CLEANING_REPORT.md  CURSOR_MCP_SETUP.md  EMBEDDINGS_GUIDE.md  MCP_FIX_SUMMARY.md  MCP_SERVER_DEVELOPMENT_REPORT.md  MCP_SERVER_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAPPORT_CORRECTION_AMC_GM.md  README_EMBEDDINGS.md  REFONTE_PARSER_RAPPORT.md  REORGANIZATION_ACTIONS.md  REORGANIZATION_PLAN.md
docs/chat/: IMPLEMENTATION.md  QUICKSTART.md  README.md
docs/crew/: IMPLEMENTATION.md  README.md
easacompliance/: __init__.py  embeddings.py  parser.py
easacompliance/llm/: __init__.py  hyperbolic.py  ollama.py
easacompliance/scripts/: __init__.py  build_embeddings.py  search_regulations.py
examples/: README.md  claude_desktop_config.json  cursor_mcp_config.json  mcp_client_test.py
mcp_server_easa/: README.md  __init__.py  config.py  schemas.py  server.py
mcp_server_easa/tools/: __init__.py  browse.py  retrieve.py  search.py  validate.py
scripts/: setup_cursor_mcp.py
tests/: __init__.py  test_chat_setup.py  test_crew_setup.py  test_embeddings.py
tools/diagnostics/: README.md  diagnostic_compare.py  diagnostic_db.py  diagnostic_no_reference.py  diagnostic_references.py  diagnostic_source_titles.py  diagnostic_types.py
